# webmux

./: .dockerignore  .gitignore  ANDROID_DEBUG.md  Dockerfile  README.md  build-android.sh  capacitor.config.ts  package-lock.json  package.json  start.sh  test-input.js  test-ws-input.js
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
backend-rust/: Cargo.toml
backend-rust/src/: main.rs  terminal_buffer.rs
backend-rust/src/chat_log/: claude_parser.rs  codex_parser.rs  mod.rs  watcher.rs
backend-rust/src/tmux/: mod.rs
backend-rust/src/types/: mod.rs
backend-rust/src/websocket/: mod.rs
docker/android-base/: Dockerfile
docker/flutter/: Dockerfile  README.md  docker-compose.yml
docker/flutter-base/: Dockerfile
docs/plans/: 2026-02-24-chat-view-design.md  2026-02-24-chat-view-plan.md
flutter/: PROJECT_STRUCTURE.md  README.md  build.sh  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/lib/: main.dart
flutter/lib/core/config/: app_config.dart
flutter/lib/core/constants/: app_constants.dart
flutter/lib/core/services/: background_service.dart
flutter/lib/core/theme/: app_theme.dart
flutter/lib/core/utils/: extensions.dart
flutter/lib/data/models/: chat_message.dart  cron_job.dart  dotfile.dart  host.dart  models.dart  system_stats.dart  (+1 more)
flutter/test/: widget_test.dart
scripts/: webmux-codex
src/: App.vue  style.css
src/api/: websocket-api.ts
src/components/: ChatView.vue  CronSection.vue  DebugScreen.vue  DotfilesSection.vue  SessionList.vue  TerminalView.vue
src/types/: index.ts
types/: README.md  tsconfig.json
(+40 files in other folders)
