[package]
name = "webmux-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Terminal/PTY handling
portable-pty = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System info
sysinfo = "0.30"

# Process execution
# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# HTTPS/TLS
axum-server = { version = "0.6", features = ["tls-rustls"] }
rustls = "0.22"
rustls-pemfile = "2.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Base64 encoding for audio streaming
base64 = "0.21"

# Lazy static for global state
lazy_static = "1.4"

# Directory utilities
dirs = "5.0"

# Zero-copy bytes handling
bytes = "1.5"

# SIMD UTF-8 validation
simdutf8 = "0.1"

# Async streams
futures = "0.3"

# For audio streaming (optional, can shell out to ffmpeg instead)
# cpal = { version = "0.15", optional = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
